--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="nav-logo">
-               <img src="images/frame.png" alt="">
+               <img src="images/frame.png" alt="" class="nav-img">
                <h1><span>G</span>amer</h1>
             </div>
             <div class="nav-writing">
