--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="nav-logo">
                <img src="images/frame.png" alt="" class="nav-img">
-               <h1><span>G</span>amer</h1>
+               <h1 class="nav-title"><span class="pink-g">G</span>amer</h1>
             </div>
             <div class="nav-writing">
                 <ul>
