background imaged saved in banner

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         </nav>
 
         <div class="banner">
+             <div class="banner-writing-container">
 
+             </div>
+             <div class="banner-img">
+                
+             </div>
         </div>
 
     </header>
