banner image added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
              </div>
              <div class="banner-img">
-                
+                <img src="images/group-18.png" alt="">
              </div>
         </div>
 
