banner writing added

--- a/index.html
+++ b/index.html
@@ -35,8 +35,19 @@
 
         <div class="banner">
              <div class="banner-writing-container">
-
+                <div class="goat-container">
+                 <h2 class="banner-title">PLAY LIKE THE</h2>
+                 <h1 class="goat">G.O.A.T.</h1>
+                 <ul>
+                    <li>1-Click instant play</li>
+                    <li>No Download</li>
+                    <li>1000s of supported online games</li>
+                 </ul>
+                 <button class="button-primary pink-btn">Sign In</button>
+                 <button class="button-primary blue-btn">Go Rogue</button>
+                </div>
              </div>
+
              <div class="banner-img">
                 <img src="images/group-18.png" alt="">
              </div>
