card container created

--- a/index.html
+++ b/index.html
@@ -60,7 +60,48 @@
     </header>
 
     <main>
+         <section class="card-container">
+            <h1>Online Games <span> Funny Videos</span></h1>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div>
+                <div class="game-card">
+                    <img src="" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
 
+                <div class="game-card">
+                    <img src="" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+
+                <div class="game-card">
+                    <img src="" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+
+                <div class="game-card">
+                    <img src="" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+
+            </div>
+
+         </section>
+
+
+         <section>
+
+         </section>
+
+
+         <section>
+
+         </section>
+
+
+         <section>
+
+         </section>
     </main>
 
     <footer>
