--- a/index.html
+++ b/index.html
@@ -61,26 +61,28 @@
 
     <main>
          <section class="card-container">
-            <h1>Online Games <span> Funny Videos</span></h1>
-            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
-            <div>
-                <div class="game-card">
-                    <img src="" alt="">
+            <h1 class="card-title">Online Games <span> Funny Videos</span></h1>
+            <p class="card-des">A Collection of Hilarious Videos to Brighten Your Day</p>
+
+            <div class="game-card">
+
+                <div class="card">
+                    <img class="card-img" src="images/rectangle-4.png" alt="">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
 
-                <div class="game-card">
-                    <img src="" alt="">
+                <div class="card">
+                    <img class="card-img" src="images/rectangle-5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
 
-                <div class="game-card">
-                    <img src="" alt="">
+                <div class="card">
+                    <img class="card-img" src="images/rectangle-6.png" alt="">
                     <p>Breaking game records like OG</p>
                 </div>
 
-                <div class="game-card">
-                    <img src="" alt="">
+                <div class="card">
+                    <img class="card-img" src="images/rectangle-7.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
 
