purple text designed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main>
          <section class="card-container">
-            <h1 class="card-title">Online Games <span> Funny Videos</span></h1>
+            <h1 class="card-title">Online Games <span class="purple-text"> Funny Videos</span></h1>
             <p class="card-des">A Collection of Hilarious Videos to Brighten Your Day</p>
 
             <div class="game-card">
