funny videos updated

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
 
                 <div class="card">
                     <img class="card-img" src="images/rectangle-4.png" alt="">
-                    <p  class="card-sub">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p  class="card-sub">No Download. No Installs. Play </p> <p  class="card-sub"> games Instantly on Gamer.</p>
                 </div>
 
                 <div class="card">
                     <img class="card-img" src="images/rectangle-5.png" alt="">
-                    <p class="card-sub">Did you score? #unblockedgames<br> #school</p>
+                    <p class="card-sub">Did you score? #unblockedgames </p> <p  class="card-sub"> #school</p>
                 </div>
 
                 <div class="card">
                     <img class="card-img" src="images/rectangle-7.png" alt="">
-                    <p  class="card-sub">Breaking game records <br> like OG</p>
+                    <p  class="card-sub">Breaking game records </p> <p  class="card-sub"> like OG</p>
                 </div>
 
                 <div class="card">
                     <img class="card-img" src="images/rectangle-6.png" alt="">
-                    <p  class="card-sub">Busted gaming on school laptop, but you are still lit.</p>
+                    <p  class="card-sub">Busted gaming on school laptop, </p> <p  class="card-sub"> but you are still lit.</p>
                 </div>
 
             </div>
