--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
             <div class="game-card">
 
                 <div class="card">
-                    <img class="card-img" src="images/rectangle-4.png" alt="">
+                    <img class="card-img" src="images/rectangle-4.png" alt=""> <svg class="play-button" width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM14.66 13.73L13.38 14.47L12.1 15.21C10.45 16.16 9.1 15.38 9.1 13.48V12V10.52C9.1 8.61 10.45 7.84 12.1 8.79L13.38 9.53L14.66 10.27C16.31 11.22 16.31 12.78 14.66 13.73Z" fill="#ffffff"></path> </g></svg>
+                    <p class="hover-text">Watch Now </p>
                     <p  class="card-sub">No Download. No Installs. Play </p> <p  class="card-sub"> games Instantly on Gamer.</p>
                 </div>
 
                 <div class="card">
-                    <img class="card-img" src="images/rectangle-5.png" alt="">
+                    <img class="card-img" src="images/rectangle-5.png" alt=""> <svg class="play-button" width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM14.66 13.73L13.38 14.47L12.1 15.21C10.45 16.16 9.1 15.38 9.1 13.48V12V10.52C9.1 8.61 10.45 7.84 12.1 8.79L13.38 9.53L14.66 10.27C16.31 11.22 16.31 12.78 14.66 13.73Z" fill="#ffffff"></path> </g></svg>
+                    <p class="hover-text">Watch Now </p>
                     <p class="card-sub">Did you score? #unblockedgames </p> <p  class="card-sub"> #school</p>
                 </div>
 
@@ -83,7 +85,8 @@
                 </div>
 
                 <div class="card">
-                    <img class="card-img" src="images/rectangle-6.png" alt="">
+                    <img class="card-img" src="images/rectangle-6.png" alt=""> <svg class="play-button" width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM14.66 13.73L13.38 14.47L12.1 15.21C10.45 16.16 9.1 15.38 9.1 13.48V12V10.52C9.1 8.61 10.45 7.84 12.1 8.79L13.38 9.53L14.66 10.27C16.31 11.22 16.31 12.78 14.66 13.73Z" fill="#ffffff"></path> </g></svg>
+                    <p class="hover-text">Watch Now </p>
                     <p  class="card-sub">Busted gaming on school laptop, </p> <p  class="card-sub"> but you are still lit.</p>
                 </div>
 
