--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
     </header>
 
     <main>
+        
+          <section class="we're-gamer-container">
+            
+
+          </section>
+
+
          <section class="card-container">
             <h1 class="card-title">Online Games <span class="purple-text"> Funny Videos</span></h1>
             <p class="card-des">A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -91,11 +98,6 @@
                 </div>
 
             </div>
-
-         </section>
-
-
-         <section>
 
          </section>
 
