section one base version added

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
     <main>
         
           <section class="we're-gamer-container">
-            
-
+            <h1 class="we're-title">We are gamer</h1>
+            <p class="we're-des">An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br>mobile games. We reach over 400 million players each <br>month and our audience keeps growing.</p>
+            <button class="button-primary">know more</button>
+            <p class="quote-des">Our purpose...</p>
+            <p class="quote">“unleash the gamer in everyone”</p>
           </section>
 
 
