we gamer shadow added

--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
 
     <main>
         
-          <section class="we're-gamer-container">
-            <h1 class="we're-title">We are gamer</h1>
-            <p class="we're-des">An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br>mobile games. We reach over 400 million players each <br>month and our audience keeps growing.</p>
-            <button class="button-primary">know more</button>
-            <p class="quote-des">Our purpose...</p>
-            <p class="quote">“unleash the gamer in everyone”</p>
+          <section class="we-gamer-container">
+            <div>
+                <img src="images/pngwing-4.png" alt="" class="we-img">
+            </div>
+
+            <div class="we-writing-container">
+                <h1 class="we-title purple-text">We are gamer</h1>
+                <p class="we-des">An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br>mobile games. We reach over 400 million players each <br>month and our audience keeps growing.</p>
+                <button class="button-primary pink-btn">KNOW MORE</button>
+                <p class="quote-des">Our purpose...</p>
+                <p class="quote">“unleash the gamer in everyone”</p>
+                </div>
           </section>
 
 
