--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="we-writing-container">
                 <h1 class="we-title purple-text">We are gamer</h1>
-                <p class="we-des">An international digital games and entertainment</p> <p class="we-des">company. We develop, publish and distribute multiplayer</p> <p class="we-des">games. We reach over 400 million players each</p> <p class="we-des">month and our audience keeps growing.</p>
+                <p class="we-des">An international digital games and entertainment</p> <p class="we-des">company. We develop, publish and distribute multiplayer</p> <p class="we-des"> mobile games. We reach over 400 million players each</p> <p class="we-des">month and our audience keeps growing.</p>
                 <button class="button-primary pink-btn know-btn">KNOW MORE</button>
                 <p class="quote-des">Our purpose...</p>
                 <p class="quote">“unleash the gamer in everyone”</p>
