third container based

--- a/index.html
+++ b/index.html
@@ -111,7 +111,21 @@
          </section>
 
 
-         <section>
+         <section class="third-container">
+
+            <div>
+              <h2 class="third-pink">Play Instantly,</h2>
+              <h1 class="third-title">No Downloads <br>
+                No Installs.</h1>
+              <p class="we-des">Play games online for free without </p>
+              <p class="we-des">downloading. Just click the Play button</p>
+              <p class="we-des">and play instantly in your browser.</p>
+            </div>
+
+            <div>
+               <img src="images/rectangle-55.png" alt="">
+               <img src="images/rectangle-66.png" alt="">
+            </div>
 
          </section>
 
