pink text added

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
             </div>
 
             <div>
-               <img src="images/rectangle-55.png" alt="">
-               <img src="images/rectangle-66.png" alt="">
+               <img src="images/rectangle-66.png" class="angela" alt="">
+               <img src="images/rectangle-55.png" class="horse" alt="">
+
             </div>
 
          </section>
