responsive added in third section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <p class="we-des">and play instantly in your browser.</p>
             </div>
 
-            <div>
+            <div class="three-images">
                <img src="images/rectangle-66.png" class="angela" alt="">
                <img src="images/rectangle-55.png" class="horse" alt="">
 
