--- a/index.html
+++ b/index.html
@@ -131,7 +131,21 @@
          </section>
 
 
-         <section>
+         <section class="games">
+
+            <div>
+                <div class="small-badges"> <img src="images/rectangle-11.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-12.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-13.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-14.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-15.png" alt=""> <h3 class="badge-title"></h3></div>
+            </div>   
+   
+            <div>   
+                <div class="small-badges"> <img src="images/rectangle-16.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-17.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-18.png" alt=""> <h3 class="badge-title"></h3></div>
+            </div>
 
          </section>
     </main>
