--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="small-badges"> <img src="images/rectangle-15.png" alt=""> <h3 class="badge-title"></h3></div>
             </div>   
    
-            <div class="secon-div">   
+            <div class="second-div">   
                 <div class="small-badges"> <img src="images/rectangle-16.png" alt=""> <h3 class="badge-title"></h3></div>
                 <div class="small-badges"> <img src="images/rectangle-17.png" alt=""> <h3 class="badge-title"></h3></div>
                 <div class="small-badges"> <img src="images/rectangle-18.png" alt=""> <h3 class="badge-title"></h3></div>
