--- a/index.html
+++ b/index.html
@@ -134,17 +134,18 @@
          <section class="games">
 
             <div class="first-div">
-                <div class="small-badges"> <img src="images/rectangle-11.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-12.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-13.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-14.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-15.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-11.png" alt=""> <h3 class="badge-title">Action Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-12.png" alt=""> <h3 class="badge-title">Adventure Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-13.png" alt=""> <h3 class="badge-title">Arcade Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-14.png" alt=""> <h3 class="badge-title">Educational Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-15.png" alt=""> <h3 class="badge-title">Word Games</h3></div>
             </div>   
    
             <div class="second-div">   
-                <div class="small-badges"> <img src="images/rectangle-16.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-17.png" alt=""> <h3 class="badge-title"></h3></div>
-                <div class="small-badges"> <img src="images/rectangle-18.png" alt=""> <h3 class="badge-title"></h3></div>
+                <div class="small-badges"> <img src="images/rectangle-16.png" alt=""> <h3 class="badge-title">Role Palying Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-17.png" alt=""> <h3 class="badge-title">Music & Audio Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-18.png" alt=""> <h3 class="badge-title">Puzzle Games</h3></div>
+                <div class="small-badges"> <img src="images/rectangle-19.png" alt=""> <h3 class="badge-title">Strategy Games</h3></div>
             </div>
 
          </section>
