responsive added for section four

--- a/index.html
+++ b/index.html
@@ -152,7 +152,25 @@
     </main>
 
     <footer>
+           <div>
 
+           </div>
+
+           <div>
+
+           </div>
+
+           <div>
+
+           </div>
+
+           <div>
+
+           </div>
+
+           <div>
+            
+           </div>
     </footer>
 
 </body>
