background responsive added

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="small-badges"> <img src="images/rectangle-16.png" alt=""> <h3 class="badge-title">Role Palying Games</h3></div>
                 <div class="small-badges"> <img src="images/rectangle-17.png" alt=""> <h3 class="badge-title">Music & Audio Games</h3></div>
                 <div class="small-badges"> <img src="images/rectangle-18.png" alt=""> <h3 class="badge-title">Puzzle Games</h3></div>
-                <div class="small-badges"> <img src="images/rectangle-19.png" alt=""> <h3 class="badge-title">Strategy Games</h3></div>
+                <div class="small-badges strategy"> <img src="images/rectangle-19.png" alt=""> <h3 class="badge-title">Strategy Games</h3></div>
             </div>
 
          </section>
@@ -169,7 +169,7 @@
            </div>
 
            <div>
-            
+
            </div>
     </footer>
 
