--- a/index.html
+++ b/index.html
@@ -152,25 +152,35 @@
     </main>
 
     <footer>
-           <div>
+          
+        <div class="nav-logo footer-logo">
+            <img src="images/frame.png" alt="" class="nav-img">
+            <h1 class="nav-title"><span class="pink-g">G</span>amer</h1>   
+        </div>
+          
+        <div>
+           <h4>Our Story    Games    Web Games    Careers    Support     My Account</h4>
+        </div>
 
-           </div>
+        <div>
+           <div class="footer-icon"></div>
+           <div class="footer-icon"></div>
+           <div class="footer-icon"></div>
+           <div class="footer-icon"></div>
+           <div class="footer-icon"></div>
+           <div class="footer-icon"></div>
+        </div>
 
-           <div>
+        <div>
+           <h4>Terms and Conditions</h4>
+           <h4>Privacy Policy</h4>
+           <h4>Cookie Policy</h4>
+           <h4>Privacy Settings</h4>
+        </div>
 
-           </div>
-
-           <div>
-
-           </div>
-
-           <div>
-
-           </div>
-
-           <div>
-
-           </div>
+        <div>
+           <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
     </footer>
 
 </body>
