--- a/index.html
+++ b/index.html
@@ -158,8 +158,13 @@
             <h1 class="nav-title"><span class="pink-g">G</span>amer</h1>   
         </div>
           
-        <div>
-           <h4>Our Story    Games    Web Games    Careers    Support     My Account</h4>
+        <div class="story">
+           <h4>Our Story</h4>
+           <h4>Games</h4>
+           <h4>Web Games</h4>
+           <h4>Careers</h4>
+           <h4>Support</h4>
+           <h4>My Account</h4>
         </div>
 
         <div>
