--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
            <div class="footer-icon"></div>
         </div>
 
-        <div>
-           <h4>Terms and Conditions</h4>
-           <h4>Privacy Policy</h4>
-           <h4>Cookie Policy</h4>
-           <h4>Privacy Settings</h4>
+        <div class="terms">
+           <p>Terms and Conditions</p>
+           <p>Privacy Policy</p>
+           <p>Cookie Policy</p>
+           <p>Privacy Settings</p>
         </div>
 
         <div>
