last text added

--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
         </div>
           
         <div class="story">
-           <h4>Our Story</h4>
-           <h4>Games</h4>
-           <h4>Web Games</h4>
-           <h4>Careers</h4>
-           <h4>Support</h4>
-           <h4>My Account</h4>
+           <p>Our Story </p>
+           <p>Games     </p>
+           <p>Web Games </p>
+           <p>Careers   </p>
+           <p>Support   </p>
+           <p>My Account</p>
         </div>
 
-        <div>
+        <div class="footer-icon-container">
            <div class="footer-icon"></div>
            <div class="footer-icon"></div>
            <div class="footer-icon"></div>
@@ -183,7 +183,7 @@
            <p>Privacy Settings</p>
         </div>
 
-        <div>
+        <div class="last-text">
            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
     </footer>
